[project]
name = "proxychainer"
version = "1.2.0"
description = "SOCKS -> VLESS Proxy Chainer"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.82.0",
    "requests",
    "httpx",
    "oauthlib",
]

[tool.flet]
app_name = "ProxyChainer"
product_name = "ProxyChainer"
description = "SOCKS → VLESS dialerProxy tunnel builder"
org = "com.proxychainer"
assets_dir = "assets"

[tool.flet.permissions]
internet = true
