[project]
name = "proxychainer"
version = "1.3.0"
description = "N-Hop Any -> Any Proxy Chainer"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.82.0",
    "requests",
    "httpx",
    "oauthlib",
]

[tool.setuptools.packages.find]
include = ["core*", "ui*", "utils*"]

[tool.flet]
app_name = "ProxyChainer"
product_name = "ProxyChainer"
description = "chain any number of proxies · any → any"
org = "com.proxychainer"
assets_dir = "assets"

[tool.flet.permissions]
internet = true